--- a/src/style.css
+++ b/src/style.css
@@ -552,9 +552,9 @@ button:focus {
 
 .tech-icons {
   font-size: 4.5em !important;
+  color: rgba(200, 137, 230, 0.7);
   margin: 15px !important;
   padding: 10px !important;
-  opacity: 0.93 !important;
   border: 1.7px solid rgba(200, 137, 230, 0.637) !important;
   vertical-align: middle !important;
   text-align: center !important;
@@ -562,7 +562,7 @@ button:focus {
   display: table !important;
   box-shadow: 4px 5px 4px 3px rgba(89, 4, 168, 0.137) !important;
   overflow: hidden !important;
-  transition: all 0.4s ease 0s !important;
+  /* transition: all 0.4s ease 0s !important; */
 }
 
 @media (max-width: 767px) {
